--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Microsoft – Cloud, Computers, Apps &amp; Gaming</title>
     <link rel="stylesheet" href="main.css" >
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <script src="https://cdn.tailwindcss.com"></script>
     
     
   </head>
